# PharmaGPT-VN

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
data/: demo_corpus.json
scripts/: demo_backend.py  eval_bench.py  ingest_corpus.py  train_sft.py
src/pharmagpt_vn/api/: dependencies.py  main.py
src/pharmagpt_vn/contracts/: __init__.py  disambiguation.py
src/pharmagpt_vn/core/: config.py  guardrails.py  refusal.py  tracing.py  validators.py
src/pharmagpt_vn/evaluation/: __init__.py  benchmark.py  judges.py  metrics.py  ragas.py
src/pharmagpt_vn/models/: __init__.py  llm_client.py  openai_client.py
src/pharmagpt_vn/rag/: __init__.py  cache.py  chunker.py  contextual.py  crag.py  embeddings.py  hyde.py  ingest.py  openrouter_reranker.py  qdrant_store.py  query_decompose.py  query_rewrite.py  reranker.py  retriever.py
tests/fixtures/: disambiguation_example.json  vn_pharmbench_mini.jsonl
tests/integration/: test_qdrant_store.py  test_retriever_filter.py
tests/unit/: test_cache.py  test_chat_service.py  test_chunker.py  test_contextual.py  test_contracts.py  test_crag.py  test_dependencies.py  test_disambiguation_service.py  test_embed_route.py  test_evaluation.py  test_guardrails.py  test_hyde.py  test_ingest.py  test_models_client.py  test_openrouter_reranker.py  test_query_decompose.py  test_query_rewrite.py  test_ragas.py  test_refusal.py  test_reranker.py  test_retriever.py  test_tracing.py  test_validators.py
(+7 files in other folders)
