[project]
name = "pharmagpt_vn"
version = "0.1.0"
description = "PharmaGPT-VN — Vietnamese pharmaceutical LLM with RAG (PharmLink AI)"
authors = [{ name = "PharmLink AI Team" }]
requires-python = ">=3.11"
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "torch>=2.4.0",
  "transformers>=4.45.0",
  "accelerate>=1.0.0",
  "vllm>=0.6.3",
  "qdrant-client>=1.12.0",
  "sentence-transformers>=3.2.0",
  "FlagEmbedding>=1.3.0",
  "redis>=5.1.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]
training = [
  "datasets>=3.0.0",
  "trl>=0.11.0",
  "peft>=0.13.0",
  "bitsandbytes>=0.44.0",
  "wandb>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharmagpt_vn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/pharmagpt_vn --cov-report=term-missing --cov-fail-under=80"
